# CLOUD_BASED_VO

CLOUD_BASED_VO_ROBOT/: README.md  exp.sh  exp.sh~  log.txt  make.sh  parameters.txt  parameters.txt~  test.yml  uploading.yml
CLOUD_BASED_VO_ROBOT/src/: CMakeLists.txt  CMakeLists.txt~  basic_client.cpp  robot.cpp  robotPthread.cpp  robotWS.cpp  robot_.cpp  test.cpp
CLOUD_BASED_VO_SERVER/: README.md
CLOUD_BASED_VO_SERVER/conf/: nginx.conf
CLOUD_BASED_VO_SERVER/core/slam/data/: initialize_1.txt
CLOUD_BASED_VO_SERVER/core/slam/include/: robotBase.h  robotBase_server.h  slamBase.h  slamBase_server.h  slamInterface.h
CLOUD_BASED_VO_SERVER/core/slam/lib/: slamInterface.lua
CLOUD_BASED_VO_SERVER/core/slam/src/: CMakeLists.txt  robotJson.cpp  robotWS.cpp  slamBase.cpp  slamInterface.cpp  test.cpp  visualOdomitry.cpp
CLOUD_BASED_VO_SERVER/lua/: load_balancing_webserver.lua  test.lua  test_call_lua.lua  uploading.lua
